Updated bash and included outline for radix

--- a/MPI_Builds/CMakeLists.txt
+++ b/MPI_Builds/CMakeLists.txt
@@ -5,6 +5,9 @@ find_package(caliper REQUIRED)
 find_package(adiak REQUIRED)
 
 add_executable(mergesort mergesort.cpp)
+add_executable(bitonic bitonic.cpp)
+add_executable(radix radix.cpp)
+add_executable(sample_sort sample_sort.cpp)
 
 message(STATUS "MPI includes : ${MPI_INCLUDE_PATH}")
 message(STATUS "Caliper includes : ${caliper_INCLUDE_DIR}")
@@ -15,3 +18,9 @@ include_directories(${adiak_INCLUDE_DIRS})
 
 target_link_libraries(mergesort PRIVATE MPI::MPI_CXX)
 target_link_libraries(mergesort PRIVATE caliper)
+target_link_libraries(bitonic PRIVATE MPI::MPI_CXX)
+target_link_libraries(bitonic PRIVATE caliper)
+target_link_libraries(radix PRIVATE MPI::MPI_CXX)
+target_link_libraries(radix PRIVATE caliper)
+target_link_libraries(sample_sort PRIVATE MPI::MPI_CXX)
+target_link_libraries(sample_sort PRIVATE caliper)
